--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1> to do list</h1> 
-<h2> math science ela gym</h2>
- <p> math is cool and fun and i love it </p>
+<html>
+    <head>
+        <title>shamarr todo list</title>
+    </head>
+    <body>
+        <h1> to do list</h1>
+        <h2> math science ela gym</h2>
+        <p> math is cool and fun and i love it </p>
+    </body>
+</html>
